--- a/src/app/listings/Hero.css
+++ b/src/app/listings/Hero.css
@@ -8,7 +8,7 @@
   padding: 5%;
 }
 .hero .container {
-  padding-top: 17%;
+  padding-top: 7%;
 }
 
 .hero p {
@@ -65,10 +65,10 @@ form h4 {
 }
 
 .equal-size-select {
-  width: 100%;
+  width: "100%";
   padding: 0.5rem;
   border: 1px solid rgba(128, 128, 128);
-  border-radius: 0.1rem;
+  border-radius: 0.25rem;
   font-family: Arial, Helvetica, sans-serif;
   margin-top: 0.3rem;
   box-sizing: border-box;
@@ -78,10 +78,9 @@ form h4 {
   font-size: 17px;
 }
 .price-input {
-  width: 45%;
   padding: 0.5rem;
   border: 1px solid rgba(128, 128, 128);
-  border-radius: 0.1rem;
+  border-radius: 0.25rem;
   font-family: Arial, Helvetica, sans-serif;
   margin-top: 0.3rem;
   box-sizing: border-box;
