--- a/src/components/Featured/Featured.css
+++ b/src/components/Featured/Featured.css
@@ -1,12 +1,12 @@
 .featured .box {
-  box-shadow: 0 0 20px 0 rgb(112 121 138 / 18%);
+  box-shadow: 0 0 20px 0 rgba(7, 7, 7, 0.18);
   border-radius: 6px;
   text-align: center;
   padding: 30px;
   cursor: pointer;
 }
 .featured img {
-  width: 35px;
-  height: 35px;
+  width: 45px;
+  height: 45px;
   margin: auto;
 }
